--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	margin: 0 248px;
 }
 ol, ul {
 	list-style: none;
@@ -64,3 +65,12 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+nav {
+	width: 100%;
+}
+
+nav a {
+	text-decoration: none;
+	color: grey;
+	margin: 10px;
+}
